rbac-aks/poi_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: poi
  name: poi
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: poi
    spec:
      containers:
      - image: registrynhi6414.azurecr.io/tripviewer/poi
        name: poi
        ports:
        - containerPort: 80        
        resources: {}
        
        # https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/secrets"
          readOnly: true
      
      volumes:
      - name: secrets-store01-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "az-kv-challenge-4"
                            
status: {}
