rbac-aks/trips_deployment_mi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: trips
  name: trips
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: trips
      annotations:
        azure.workload.identity/inject-proxy-sidecar : "true"
        azure.workload.identity/proxy-sidecar-port : "8080"
    spec:
      serviceAccountName: workload-identity-sa
      containers:
      - image: registrynhi6414.azurecr.io/tripviewer/trips
        name: trips
        ports:
        - containerPort: 80
        
        # https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
