rbac-aks/user-java_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: user-java
  name: user-java
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: user-java
    spec:
      containers:
      - image: registrynhi6414.azurecr.io/tripviewer/user-java
        name: user-java
        resources: {}
        ports:
        - containerPort: 80       
        # https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
status: {}
