rbac-aks/trips_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: trips
  name: trips
  namespace: api
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: trips
  type: ClusterIP
status:
  loadBalancer: {}
