rbac-aks/user-java_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: user-java
  name: user-java
  namespace: api
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: user-java
  type: ClusterIP
status:
  loadBalancer: {}
